--- a/src/index.html
+++ b/src/index.html
@@ -1,56 +1,42 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Lemoncha</title>
+  <title>Oshyer Admin</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
 
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/assets/icons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 
-  <!--<script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
-  <script>
-    // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyCM4b3P1avAE45l7h448orYk2YLOQEMd94",
-      authDomain: "oshyer-bb7b1.firebaseapp.com",
-      databaseURL: "https://oshyer-bb7b1.firebaseio.com",
-      projectId: "oshyer-bb7b1",
-      storageBucket: "oshyer-bb7b1.appspot.com",
-      messagingSenderId: "395693516321"
-    };
-    var defaultApp = firebase.initializeApp(config);
-
-    console.log(defaultApp.name);
-
-    var defaultStorage = defaultApp.storage();
-
-  </script>-->
+  <style type="text/css">
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+  </style>
 </head>
-<body>
-<!-- Menu Bar -->
-<!--<div class="ui menu">
-  <div class="ui container">
-      <img class="logo" src="/assets/images/tala_green_logo.png" width="150px" height="53px">
-    <div class="header item borderless">
-      <h1 class="ui header">
-        Tala India Admin UI
-      </h1>
-    </div>
-  </div>
-</div>-->
 
-<!--<div class="ui main text container">-->
-  <app-root></app-root> <!-- <--- Our app loads here! -->
-<!--</div>-->
+<body>
+<app-root></app-root>
 </body>
 </html>
